--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">MVIDemo</string>
+    <string name="app_name">MVVMDemo</string>
     <string name="fetch_user">Fetch User</string>
-
 </resources>
